# GameGirl

./: Cargo.toml  README.md
.github/: labeler.yml
docs/: hot_to_proceed.md
roms/: README.md
roms/blargg-gb-tests/: README.md
roms/hello-world/: README.md
roms/mooneye/: README.md
src/: main.rs  rom.rs
