[package]
name = "game_girl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A GameBoy emulator written in Rust"
repository = "https://github.com/smirror/GameGirl"
readme = "README.md"
keywords = ["gameboy", "emulator", "rust"]

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
